[gd_scene load_steps=8 format=3 uid="uid://dbi28hmt1dd6b"]

[ext_resource type="Script" path="res://src/ui/menu_control.gd" id="1_0x5m1"]
[ext_resource type="Texture2D" uid="uid://c6mib8re2udpp" path="res://Assets/ui/btn/inventory_btn_normal.png" id="1_p5vtx"]
[ext_resource type="Texture2D" uid="uid://03iin2nq24co" path="res://Assets/ui/btn/inventory_btn_pressed.png" id="2_s1s3l"]
[ext_resource type="Texture2D" uid="uid://hpk47aw0p2d3" path="res://Assets/ui/btn/state_btn_normal.png" id="3_reicq"]
[ext_resource type="Texture2D" uid="uid://bcp46mdus8yvt" path="res://Assets/ui/btn/state_btn_pressed.png" id="4_c7gjs"]
[ext_resource type="Texture2D" uid="uid://dihwo0g0t32bg" path="res://Assets/ui/btn/Quest_btn_normal.png" id="5_kykie"]
[ext_resource type="Texture2D" uid="uid://4vjb27siqxxd" path="res://Assets/ui/btn/Quest_btn_pressed.png" id="6_yvn0h"]

[node name="MenuControl" type="CanvasLayer"]
script = ExtResource("1_0x5m1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 710.0
offset_right = 480.0
offset_bottom = 840.0
color = Color(0.937255, 0.937255, 0.937255, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)

[node name="InventoryBtn" type="TextureButton" parent="ColorRect/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_p5vtx")
texture_pressed = ExtResource("2_s1s3l")

[node name="StateBtn" type="TextureButton" parent="ColorRect/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_reicq")
texture_pressed = ExtResource("4_c7gjs")

[node name="QuestBtn" type="TextureButton" parent="ColorRect/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_kykie")
texture_pressed = ExtResource("6_yvn0h")

[connection signal="pressed" from="ColorRect/HBoxContainer/InventoryBtn" to="." method="_on_inventory_btn_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/StateBtn" to="." method="_on_state_btn_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/QuestBtn" to="." method="_on_quest_btn_pressed"]
